--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@hamburgueria60/eslint-config-default",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "main": ".eslintrc.js",
-  "devDependencies": {
+  "dependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
